Add Cohort Buzz, Events/Announcements creation, Gallery, and UI improvements
- Add Cohort Buzz page with posts, anonymous confessions, reactions, comments
- Add event creation and comments functionality
- Add announcement creation and comments functionality
- Add Gallery with lightbox and admin upload
- Add individual interview experience pages
- Add Feedback button component
- Remove AI chat widget and Opportunities from sidebar
- Update dashboard with real stats from database
- Remove bio from member cards
- Update company logo API to use logo.dev
- Add bulk upload scripts for resumes, gallery, experiences
- Update schema with comments, kudos, buzz_posts tables

--- a/package.json
+++ b/package.json
@@ -12,7 +12,9 @@
     "@google/generative-ai": "^0.24.1",
     "@supabase/ssr": "^0.8.0",
     "@supabase/supabase-js": "^2.87.1",
+    "cloudinary": "^2.8.0",
     "next": "16.0.8",
+    "next-cloudinary": "^6.17.5",
     "react": "19.2.1",
     "react-dom": "19.2.1"
   },
@@ -21,6 +23,7 @@
     "@types/node": "^20",
     "@types/react": "^19",
     "@types/react-dom": "^19",
+    "dotenv": "^17.2.3",
     "eslint": "^9",
     "eslint-config-next": "16.0.8",
     "groq-sdk": "^0.37.0",
